# mimetic

./: CMakeLists.txt  LICENSE  README.md  linux-gcc4.cmake  win-vs140.cmake
cmake/: config.cmake.in
mimetic/: contentid.cxx  contenttype.cxx  mimeentity.cxx  mimeentity.h  streambufs.h  strutils.cxx  strutils.h
mimetic/os/: fileop.cxx
mimetic/parser/: itparser.h
mimetic/rfc822/: datetime.cxx  field.cxx  header.cxx  mailbox.cxx  messageid.cxx
